--- a/src/styles.css
+++ b/src/styles.css
@@ -95,7 +95,7 @@ body {
     border-right:1px solid rgb(240, 240, 240);
 }
 
-#info-content {
+#page-content {
     width:clamp(350px,100%,700px);
     display:flex;
     flex-direction:column;
@@ -103,14 +103,13 @@ body {
     margin-bottom:50px;
 }
 
-#info-content>div {
+#page-content>div {
     box-shadow:3px 3px 8px rgba(0, 0, 0, 0.1);
 }
 
 #title-card {
     width:100%;
     height:300px;
-    background:linear-gradient(rgba(0, 115, 181, 0.39),rgb(0,114,181)),url(../src/space-background.jpeg);
     background-size: cover;
     font-size:3em;
     font-family: 'Libre Baskerville';
