--- a/src/styles.css
+++ b/src/styles.css
@@ -16,8 +16,11 @@
 
 :root {
     --blue: rgb(0,114,181);
-    --green: rgb(130,159,64);
+    --blue-semiopaque: rgba(0,114,181,0.5);
+    --green: rgb(64, 159, 91);
+    --green-semiopaque: rgba(64, 159, 91,0.5);
     --amaranth: rgb(182,23,75);
+    --amaranth-semiopaque: rgba(182,23,75,0.5);
     --black: rgb(50,50,50);
 }
 
@@ -157,8 +160,7 @@ body {
 }
 
 .info-main>.info-image {
-    background-image: url(../src/chicken-waffle.jpeg);
-    background-size:cover;
-    background-position:center;
+    width:100%;
     height:165px;
+    object-fit: cover;
 }
