--- a/src/styles.css
+++ b/src/styles.css
@@ -31,7 +31,9 @@ body {
     flex-direction: column;
     box-sizing:border-box;
     font-family: 'Quicksand';
-    background-color:rgb(240, 240, 240);
+    background: linear-gradient(rgba(20,20,20,0.5),rgba(20,20,20,0.5)), url("https://images.unsplash.com/photo-1534796636912-3b95b3ab5986?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8MXx8fGVufDB8fHx8fA%3D%3D&w=1000&q=80");
+    background-attachment:fixed;
+    /* background-color:rgb(240, 240, 240); */
 }
 
 #content {
@@ -113,7 +115,6 @@ body {
 #title-card {
     width:100%;
     height:300px;
-    background-size: cover;
     font-size:3em;
     font-family: 'Libre Baskerville';
     color:white;
