add onclick to logo to navigate to home tab

--- a/src/styles.css
+++ b/src/styles.css
@@ -72,6 +72,10 @@ body {
     width:30px;
 }
 
+#logo:hover {
+    cursor:pointer;
+}
+
 #header>button {
     background-color:transparent;
     border-bottom:none;
